--- a/app-store-angular-web/src/app/components/template/footer/footer.component.html
+++ b/app-store-angular-web/src/app/components/template/footer/footer.component.html
@@ -1,1 +1,9 @@
-<p>footer works!</p>
+<mat-toolbar class="footer">
+    <span>
+        Desenvolvido com 
+        <i class="material-icons color-red" style="vertical-align: middle;">
+            favorite
+        </i>
+        por DK
+    </span>
+</mat-toolbar>
