--- a/app-store-angular-web/src/styles.css
+++ b/app-store-angular-web/src/styles.css
@@ -2,3 +2,7 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.color-red{
+    color: rgb(227, 94, 107);
+}
