--- a/app-store-angular-web/src/app/components/product/product-create/product-create.component.html
+++ b/app-store-angular-web/src/app/components/product/product-create/product-create.component.html
@@ -1,1 +1,2 @@
-<p>product-create works!</p>
+<button mat-raised-button (click)="createProduct()" color="primary" >Salvar</button>
+<button mat-raised-button (click)="cancel()" >Cancelar</button>
