--- a/app-store-angular-web/src/app/components/product/product-read/product-read.component.html
+++ b/app-store-angular-web/src/app/components/product/product-read/product-read.component.html
@@ -12,7 +12,7 @@
 
         <ng-container matColumnDef="price">
             <th mat-header-cell *matHeaderCellDef>Preço</th>
-            <td mat-cell *matCellDef="let row">{{row.price}}</td>
+            <td mat-cell *matCellDef="let row">{{row.price | currency: 'BRL'}}</td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns" ></tr>
