--- a/app-store-angular-web/src/app/components/product/product-update/product-update.component.html
+++ b/app-store-angular-web/src/app/components/product/product-update/product-update.component.html
@@ -1,1 +1,17 @@
-<p>product-update works!</p>
+<mat-card>
+    <mat-card-title>
+        Alterar Produto
+    </mat-card-title>
+    <form>
+        <mat-form-field>
+            <input [(ngModel)]="product.name" name="name" matInput placeholder="Nome">
+        </mat-form-field>
+        <mat-form-field>
+            <input [(ngModel)]="product.price" name="price" matInput placeholder="Preço (RS)">
+        </mat-form-field>
+    </form>
+
+    <button mat-raised-button (click)="cancel()" >Cancelar</button>
+    <button mat-raised-button (click)="updateProduct()" color="primary" >Salvar</button>
+</mat-card>
+
